--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="SOLID!" name="description" />
     <meta content="Anonymous" name="author" />
-    <meta
-        content="https://e0.pxfuel.com/wallpapers/200/146/desktop-wallpaper-machine-learning-types-of-machine-learning.jpg"
-        property="og:image" />
+    <meta content="https://miro.medium.com/v2/resize:fit:1200/0*KbcqgZLRBtfyqPCN.jpg" property="og:image" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/images/favicon.ico') }}">
 
