--- a/templates/kelulusan_mhs.html
+++ b/templates/kelulusan_mhs.html
@@ -54,13 +54,13 @@
                                     </select>
                                 </div>
                                 <div class="input-group mb-3">
+                                    <input type="number" min="0" max="99" name="age" class="form-control"
+                                        placeholder="Umur" required>
                                     <select class="form-select" name="married_status" id="married_status" required>
                                         <option value="">Status Nikah</option>
                                         <option value="0">Belum Menikah</option>
                                         <option value="1">Menikah</option>
                                     </select>
-                                    <input type="number" min="0" max="99" name="age" class="form-control"
-                                        placeholder="Umur" required>
                                 </div>
                                 <div class="input-group mb-3">
                                     <input type="number" min="0" max="4" step="0.01" name="ips1" class="form-control"
@@ -105,7 +105,7 @@
                             <h3>
                                 Hasil <br>
                                 Status Kelulusan :
-                                <b>{{ "Terlambat" if data.predict else "Tepat Waktu" }}</b>
+                                <b>{{ "Terlambat" if data.predict else "Tepat" }}</b>
                             </h3>
                             <div class="table-responsive">
                                 <table class="table table-striped mb-0">
@@ -130,7 +130,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <th scope="row">{{ "Terlambat" if data.predict else "Tepat Waktu" }}</th>
+                                            <th scope="row">{{ data.predict }}</th>
                                             {% for value in data.inputs %}
                                             <td>{{ "Perempuan" if value[0] else "Laki-laki" }}</td>
                                             <td>{{ "Mahasiswa" if value[1] else "Bekerja" }}</td>
