--- a/templates/kelulusan_mhs.html
+++ b/templates/kelulusan_mhs.html
@@ -99,7 +99,7 @@
 
                             <p class="card-title-desc">
                                 <b>Informasi:</b><br>
-                                Inputan data berupa desimal, contoh: 3.43<br>
+                                Inputan data seperti contoh: 3.43<br>
                             </p>
                             {% if data %}
                             <h3>
